fix migration.html responsive on mobile

--- a/assets/css/cost-slider.css
+++ b/assets/css/cost-slider.css
@@ -209,6 +209,6 @@ box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, .3); margin-left:-10px; }
 
 @media only screen and (max-width: 480px) {
 	#show_form {  width: 300px;}
-	.price-calculator .slider { width: 77%; }
+	.price-calculator .slider { width: 75%; }
 	.price-calculator .row input[type="text"] { width: 100%; }
 }
